--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,7 +13,7 @@ jobs:
     name: Run ShellCheck Security Scans
     runs-on: ubuntu-latest
     container:
-      image: debian:latest # Use a Debian container
+      image: ubuntu:latest # Use an Ubuntu container
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
@@ -22,6 +22,15 @@ jobs:
       run: |
         echo "Installing ShellCheck..."
         apt update && apt install -y shellcheck
+
+    - name: Install jq
+      run: |
+        echo "Installing jq..."
+        apt update || (echo "Failed to update repositories" && exit 1)
+        apt install -y jq || (echo "Failed to install jq using apt. Falling back to direct binary download..." && \
+          curl -Lo /usr/bin/jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 && chmod +x /usr/bin/jq)
+        echo "jq version:"
+        jq --version || (echo "jq is not installed or not in PATH" && exit 1)
 
     - name: Run ShellCheck on Shell Scripts
       run: |
@@ -38,11 +47,6 @@ jobs:
       run: |
         echo "Installing Git..."
         apt update && apt install -y git
-
-    - name: Install jq
-      run: |
-        echo "Installing jq..."
-        apt update && apt install -y jq
 
     - name: Configure Safe Directory
       run: |
@@ -78,3 +82,37 @@ jobs:
         git config --global user.name "GitHub Actions Bot"
         git config --global user.email "actions@github.com"
         BRANCH_NAME="shellcheck-fixes"
+        if [ -d "scan_results" ] && [ "$(ls -A scan_results)" ]; then
+          git add scan_results/
+          git commit -m "Update Security fixes"
+        else
+          echo "No files to commit in scan_results/ directory. Creating a dummy commit to ensure branch has history."
+          echo "Dummy commit content" > dummy_file.txt
+          git add dummy_file.txt
+          git commit -m "Dummy commit to ensure branch has history"
+        fi
+        echo "Pushing branch: $BRANCH_NAME"
+        git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} $BRANCH_NAME || true
+
+    - name: Install GitHub CLI
+      run: |
+        echo "Installing GitHub CLI..."
+        apt update && apt install -y gh
+        echo "Verifying GitHub CLI installation..."
+        gh --version
+
+    - name: Create or Update Pull Request
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        BRANCH_NAME="shellcheck-fixes"
+        echo "Checking for existing pull request for branch: $BRANCH_NAME..."
+        EXISTING_PR=$(gh pr list --head "$BRANCH_NAME" --json number | jq -r '.[0].number')
+        if [ "$EXISTING_PR" != "null" ]; then
+          echo "Updating existing pull request..."
+          RESULTS=$(cat scan_results/*.txt)
+          gh pr comment "$EXISTING_PR" --body "Updated results:\n\`\`\`\n$RESULTS\n\`\`\`"
+        else
+          echo "Creating new pull request..."
+          gh pr create --title "ShellCheck Fixes" --body "This pull request contains fixes for issues identified during the ShellCheck scan." --base main --head "$BRANCH_NAME"
+        fi
