--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -23,15 +23,10 @@ jobs:
         echo "Installing ShellCheck..."
         apt update && apt install -y shellcheck
 
-    - name: Install jq
+    - name: Install Python
       run: |
-        echo "Installing jq..."
-        apt update || (echo "Failed to update repositories" && exit 1)
-        apt install -y jq || (echo "Failed to install jq using apt. Falling back to direct binary download..." && \
-          curl -Lo /usr/bin/jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 && chmod +x /usr/bin/jq)
-        echo "Verifying jq installation..."
-        jq --version || (echo "jq is not installed or not accessible in PATH" && exit 1)
-        echo "jq is successfully installed."
+        echo "Installing Python..."
+        apt update && apt install -y python3 python3-pip
 
     - name: Run ShellCheck on Shell Scripts
       run: |
@@ -108,7 +103,11 @@ jobs:
       run: |
         BRANCH_NAME="shellcheck-fixes"
         echo "Checking for existing pull request for branch: $BRANCH_NAME..."
-        EXISTING_PR=$(gh pr list --head "$BRANCH_NAME" --json number | jq -r '.[0].number')
+        EXISTING_PR=$(gh pr list --head "$BRANCH_NAME" --json number | python3 -c '
+import sys, json
+data = json.load(sys.stdin)
+print(data[0]["number"] if data else "null")
+')
         if [ "$EXISTING_PR" != "null" ]; then
           echo "Updating existing pull request..."
           RESULTS=$(cat scan_results/*.txt)
