--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,4 +1,4 @@
-name: "Security Shell Overwatch"
+name: "Security Overwatch"
 
 on:
   push:
@@ -22,11 +22,6 @@ jobs:
       run: |
         echo "Installing ShellCheck..."
         apt update && apt install -y shellcheck
-
-    - name: Install Python
-      run: |
-        echo "Installing Python..."
-        apt update && apt install -y python3 python3-pip
 
     - name: Run ShellCheck on Shell Scripts
       run: |
@@ -103,12 +98,8 @@ jobs:
       run: |
         BRANCH_NAME="shellcheck-fixes"
         echo "Checking for existing pull request for branch: $BRANCH_NAME..."
-        EXISTING_PR=$(gh pr list --head "$BRANCH_NAME" --json number | python3 -c '
-import sys, json
-data = json.load(sys.stdin)
-print(data[0]["number"] if data else "null")
-')
-        if [ "$EXISTING_PR" != "null" ]; then
+        EXISTING_PR=$(gh pr list --head "$BRANCH_NAME" | grep -o '#[0-9]*' | head -n 1)
+        if [ -n "$EXISTING_PR" ]; then
           echo "Updating existing pull request..."
           RESULTS=$(cat scan_results/*.txt)
           gh pr comment "$EXISTING_PR" --body "Updated results:\n\`\`\`\n$RESULTS\n\`\`\`"
