--- a/.github/workflows/security_overwatch.yml
+++ b/.github/workflows/security_overwatch.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '0 2 * * 7' # Weekly scan on Sundays
+    - cron: '0 3 * * 1'
 
 jobs:
   codeql-analysis:
