--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,11 +1,13 @@
-name: Validate Package Dependancies
+name: Validate Package Dependencies
 
 on:
   schedule:
     - cron: '0 3 * * 1'  # Weekly on Mondays at 3 AM UTC
   workflow_dispatch:
+
 permissions:
   contents: read
+
 jobs:
   validate-progs:
     runs-on: ubuntu-latest
