--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   validate-progs:
@@ -65,7 +65,6 @@ jobs:
             echo "No changes detected."
             rm -f progs-temp.csv
             echo "changes_made=false" >> "$GITHUB_OUTPUT"
-          fi
 
       - name: Create Pull Request if changes
         if: steps.update_packages.outputs.changes_made == 'true'
@@ -79,6 +78,7 @@ jobs:
           commit-message: "chore: update progs.csv with latest package versions"
           branch: update-packages-${{ github.run_number }}
           delete-branch: true
+          token: ${{ secrets.ACTION_TOKEN }}
 
       - name: No changes found
         if: steps.update_packages.outputs.changes_made == 'false'
