--- a/.github/workflows/insights.yml
+++ b/.github/workflows/insights.yml
@@ -59,5 +59,5 @@ jobs:
       - name: Deploy traffic badges to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.ACTION_TOKEN }}
           publish_dir: ./public
