--- a/.github/workflows/insights.yml
+++ b/.github/workflows/insights.yml
@@ -2,7 +2,7 @@ name: Generate GitHub Insights
 
 on:
   schedule:
-    - cron: '0 3 * * *'
+    - cron: '0 3 * * *' 
   workflow_dispatch:
   
 permissions:
@@ -59,5 +59,5 @@ jobs:
       - name: Deploy traffic badges to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.ACTION_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
