--- a/.github/workflows/version-control.yml
+++ b/.github/workflows/version-control.yml
@@ -1,4 +1,3 @@
-# auto versioning 
 name: Version Control
 
 on:
@@ -48,19 +47,17 @@ jobs:
         
         if [ -z "$LATEST_TAG" ]; then
           # No tags exist, start with v1.1.8
-          NEW_VERSION="v1.1.9"
-          NEW_VERSION_NUMBER="0.1"
+          NEW_VERSION="v1.1.8"
         else
           # Extract version number and increment by 0.01
           CURRENT_VERSION=${LATEST_TAG#v}
           # Use bc for floating point arithmetic and format with leading zero
-          NEW_VERSION_NUMBER=$(echo "scale=2; $CURRENT_VERSION + 0.01" | bc | sed 's/^\./0./')
-          NEW_VERSION="v$NEW_VERSION_NUMBER"
+          NEW_VERSION=$(echo "scale=2; $CURRENT_VERSION + 0.01" | bc | sed 's/^\./0./')
+          NEW_VERSION="v$NEW_VERSION"
         fi
         
         echo "current_tag=$LATEST_TAG" >> $GITHUB_OUTPUT
         echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
-        echo "new_version_number=$NEW_VERSION_NUMBER" >> $GITHUB_OUTPUT
         
         echo "Previous version: $LATEST_TAG"
         echo "New version: $NEW_VERSION"
@@ -72,7 +69,7 @@ jobs:
       if: steps.check_bot.outputs.skip == 'false'
       run: |
         # Create the version badge
-        VERSION_BADGE="![Version](https://img.shields.io/badge/version-${{ steps.version.outputs.new_version_number }}-blue)"
+        VERSION_BADGE="![Version](https://img.shields.io/badge/version-${{ steps.version.outputs.new_version }}-blue)"
         
         # Check if version badge already exists and replace it, or add it after the title
         if grep -q "!\[Version\]" README.md; then
