--- a/.github/workflows/insights.yml
+++ b/.github/workflows/insights.yml
@@ -2,7 +2,7 @@ name: Generate GitHub Insights
 
 on:
   schedule:
-    - cron: '0 3 * * *' 
+    - cron: '0 5 * * 5' 
   workflow_dispatch:
   
 permissions:
