--- a/.github/workflows/Advanced_codeql.yml
+++ b/.github/workflows/Advanced_codeql.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Find and lint all Bash scripts with ShellCheck
-        uses: ludeeus/action-shellcheck@v2
+        uses: ludeeus/action-shellcheck@master
         with:
           scandir: .
           fail_on_error: true
